fixed red color on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -302,9 +302,6 @@ footer a:hover {
 }
 
 @media (max-width: 480px) {
-    span {
-        color: red;
-    }
 
     /* Ajustes adicionales para pantallas muy pequeñas */
     .logo img {
